force-app/main/default/objects/Solutions_Selling_Material__c/fields/Agreement_to_Explore__c.field-meta.xml
<CustomField>
    <fullName>Agreement_to_Explore__c</fullName>
    <inlineHelpText>Weighted Score Multiplier: 1</inlineHelpText>
    <label>Agreement to Explore</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 = not present</fullName>
            </value>
            <value>
                <fullName>2 = agree on importance, not exploration</fullName>
            </value>
            <value>
                <fullName>4 = agree to explore, no access requested</fullName>
            </value>
            <value>
                <fullName>5 = agree to explore, ask for access to others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>