force-app/main/default/objects/Solutions_Selling_Material__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <defaultValue>NOW ()</defaultValue>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>