force-app/main/default/objects/Solutions_Selling_Material__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Solutions_Selling_Materials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>