force-app/main/default/objects/Solutions_Selling_Material__c/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <inlineHelpText>Weighted Score Multiplier: 3</inlineHelpText>
    <label>Pain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 = not present</fullName>
            </value>
            <value>
                <fullName>2 = pain expressed as a goal</fullName>
            </value>
            <value>
                <fullName>4 = pain expressed, no $$ value</fullName>
            </value>
            <value>
                <fullName>5 = pain expressed w/ $$ value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>