force-app/main/default/objects/Solutions_Selling_Material__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Please choose the attachment type.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Delivered Business Case / ROI</fullName>
            </value>
            <value>
                <fullName>Draft Evaluation Plan</fullName>
            </value>
            <value>
                <fullName>Final Evaluation Plan</fullName>
            </value>
            <value>
                <fullName>Go/No-Go Confirmation Email</fullName>
            </value>
            <value>
                <fullName>Handover Confirmation</fullName>
            </value>
            <value>
                <fullName>Lead Confirmation Email</fullName>
            </value>
            <value>
                <fullName>Next Steps Confirmation Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Pain Chain</fullName>
            </value>
            <value>
                <fullName>Power Sponsor Confirmation Email</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Sponsor Confirmation Email</fullName>
            </value>
            <value>
                <fullName>Transition/Implementation Plan Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>